--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lista na telefoni:</p>
+    <p>Lista na telefoni moi:</p>
     <ul id="listaTel">
 
     </ul>
